feat(release): prepare platform package updates